# living-hinge-generator

./: .gitignore  CLAUDE.md  LICENSE  ONGOING_TASKS.md  README.md  pyproject.toml  regenerate_docs_images.py
docs/: API_REFERENCE.md  CLI_DESIGN.md  CLI_USAGE.md  USER_GUIDE.md
examples/: basic_example.py  box_hinge.py  diamond_pattern.py  lamp_shade.py  material_comparison.py  oval_pattern.py  pattern_comparison.py  tall_material.py  tight_radius.py  vertical_pattern.py
src/kerf_generator/: __init__.py  cli.py  exporters.py  geometry.py  parameters.py  patterns.py
tests/: test_geometry.py  test_parameters.py  test_patterns.py
